add behat tests
